# Sandbox2D

./: .gitignore  CMakeLists.txt  EntryState.cpp  EntryState.h  LICENSE.md  README.md  Sandbox2D.sln  Sandbox2D.sln.DotSettings  Sandbox2D.vcxproj  Sandbox2D.vcxproj.filters  TestState.cpp  TestState.h  log.txt  main.cpp  stdafx.h
Box2DLib/: Box2DRelease.lib
Config/: controls.ini  gamesettings.ini
GameFiles/: AudioTestState.cpp  AudioTestState.h  Building.h  CMakeLists.txt  Capital.cpp  Capital.h  EXAMPLESTATE.cpp  EXAMPLESTATE.h  EntryState.cpp  EntryState.h  GlobalState.cpp  GlobalState.h  GrassTile.cpp  GrassTile.h  Kingdom.cpp  Kingdom.h  LocalSpaceState.cpp  LocalSpaceState.h  PerlinNoise.cpp  PerlinNoise.h  PhysicsTestState.cpp  PhysicsTestState.h  PlayState.cpp  PlayState.h  PlayerController.cpp  PlayerController.h  SandTile.cpp  SandTile.h  Ship.cpp  Ship.h  SnowTile.cpp  SnowTile.h  StoneTile.cpp  StoneTile.h  WaterTile.cpp  WaterTile.h  WorldGenerator.cpp  WorldGenerator.h  WorldMap.cpp  WorldMap.h  (+1 more)
Resources/: space-game_db.db
Sandbox2D/: Any.h  Audio.h  Bitmap.h  CMakeLists.txt  Cache.h  Database.cpp  Database.h  Doxyfile  Font.h  GameSettings.h  GameState.h  Geometry.h  Graphics.cpp  Graphics.h  IniFile.cpp  IniFile.h  IniIO.cpp  IniIO.h  IniReader.cpp  IniReader.h  InputManager.cpp  InputManager.h  Logging.h  Observer.h  PrecisionTimer.cpp  PrecisionTimer.h  Sandbox2D.cpp  Sandbox2D.h  Structs.h  TextUtils.h
Settings/: Settings.ini
Testing/: Testing.sln
cmake/: FindBox2D.cmake  FindSDL2.cmake  FindSDL2_image.cmake  FindSDL2_mixer.cmake  FindSDL2_ttf.cmake
(+222 files in other folders)
